--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.CONTABO_SSH_PRIVATE_KEY }}
+        known-hosts: ${{ secrets.CONTABO_KNOWN_HOSTS }}
 
     - name: Deploy to Server
       run: |
