--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,26 +34,22 @@ jobs:
         name: build-files
         path: dist/
         
-    # - name: executing remote ssh commands using password
-    #   uses: appleboy/ssh-action@v1.0.3
-    #   with:
-    #     host: ${{ secrets.CONTABO_SERVER_HOST }}
-    #     username: ${{ secrets.CONTABO_SERVER_USERNAME }}
-    #     key: ${{ secrets.CONTABO_SSH_PRIVATE_KEY }}
-    #     port: ${{ secrets.CONTABO_SERVER_PORT }}
-    #     script: whoami
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build  # Ensure this job runs after the build job
 
-    # - name: Setup SSH
-    #   uses: webfactory/ssh-agent@v0.5.3
-    #   with:
-    #     ssh-private-key: ${{ secrets.CONTABO_SSH_PRIVATE_KEY }}
-    
-    # - name: Add Known Hosts
-    #   run: |
-    #     mkdir -p ~/.ssh
-    #     echo "${{ secrets.CONTABO_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+    steps:
+    - name: Download Build Artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: build-files
+        path: dist/
 
-    # - name: Deploy to Server
-    #   run: |
-    #     scp -r dist/* ${{ secrets.CONTABO_SERVER_USERNAME }}@${{ secrets.CONTABO_SERVER_HOST }}:${{ secrets.CONTABO_DEPLOY_PATH }}
+    - name: Deploy to Server
+      env:
+        SSH_HOST: ${{ secrets.SSH_HOST }}
+        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
+        REMOTE_PATH: ${{ secrets.REMOTE_PATH }}
+      run: |
+        scp -r dist/* $SSH_USERNAME@$SSH_HOST:$REMOTE_PATH
 
