--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,9 +47,9 @@ jobs:
 
     - name: Deploy to Server
       env:
-        SSH_HOST: ${{ secrets.SSH_HOST }}
-        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
-        REMOTE_PATH: ${{ secrets.REMOTE_PATH }}
+        SSH_HOST: ${{ secrets.CONTABO_SERVER_HOST }}
+        SSH_USERNAME: ${{ secrets.CONTABO_SERVER_USERNAME }}
+        REMOTE_PATH: ${{ secrets.CONTABO_DEPLOY_PATH }}
       run: |
         scp -r dist/* $SSH_USERNAME@$SSH_HOST:$REMOTE_PATH
 
