edit github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,13 @@ jobs:
         ssh-keyscan $SSH_HOST >> ~/.ssh/known_hosts
         chmod 644 ~/.ssh/known_hosts
 
+    - name: Start SSH Agent and Add Key
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.CONTABO_SSH_PRIVATE_KEY }}
+      run: |
+        eval $(ssh-agent -s)
+        ssh-add ~/.ssh/id_rsa
+
     - name: Deploy to Server
       env:
         SSH_HOST: ${{ secrets.CONTABO_SERVER_HOST }}
