--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,16 +45,14 @@ jobs:
         name: build-files
         path: dist/
 
-    - name: install ssh keys
-      # check this thread to understand why its needed:
-      # https://stackoverflow.com/a/70447517
-      run: |
-        install -m 600 -D /dev/null ~/.ssh/id_rsa
-        echo "${{ secrets.CONTABO_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.CONTABO_SERVER_HOST }} > ~/.ssh/known_hosts
-
-    - name: connect and pull
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
+    - name: Deploy to Server
+          uses: webfactory/ssh-agent@v0.5.4
+          with:
+            ssh-private-key: ${{ secrets.CONTABO_SSH_PRIVATE_KEY }}
+            ssh-known-hosts: ${{ secrets.CONTABO_SERVER_HOST }}
+            ssh-strict: true
+            script: |
+              scp -r dist/* $CONTABO_SSH_USERNAME@$CONTABO_SSH_HOST:$CONTABO_DEPLOY_PATH
     
     # - name: Add SSH Key and Fetch Host Key
     #   env:
